--- a/운영체제_1주차.md
+++ b/운영체제_1주차.md
@@ -71,15 +71,16 @@
 
 *참고) 프리미티브*
 	
-	컴퓨터 그래픽스에서 그래픽스 프로그램에 의해 개별적인 실체로 그려지고 저장, 조작될 수 있는 선·원·곡선·다각형과 같은 그래픽 디자인을 창작하는 데 필요한 요소.
-	기하학적 프리미티브라고도 한다.
+	컴퓨터 그래픽스에서 그래픽스 프로그램에 의해 개별적인 실체로 그려지고 저장, 조작될 수 있는 
+	선·원·곡선·다각형과 같은 그래픽 디자인을 창작하는 데 필요한 요소. 기하학적 프리미티브라고도 한다.
 
 *참고) 보조 저장장치*
 
 	@ 다량의 프로그램과 데이터를 장기간 보관하기 위한 저장 장치
 	@ 주로 디스크 장치가 사용됨 (HDD ,SSD)
 	@ CPU 및 메모리와의 성능 차이가 매우 크기 때문에 컴퓨터 시스템 전체의 성능에 중요한 부분을 차지
-	@ 주 메모리는 모든 데이터와 프로그램을 수용하기에는 용량이 너무 작고, 또한 전원이 꺼질 경우 저장하고 있던 데이터가 사라지기 때문에 컴퓨터 시스템은 반드시 주 메모리 내용을 저장하기 위해 보조 저장장치를 제공해야 한다. 
+	@ 주 메모리는 모든 데이터와 프로그램을 수용하기에는 용량이 너무 작고, 또한 전원이 꺼질 경우 저장하고 있던
+	 데이터가 사라지기 때문에 컴퓨터 시스템은 반드시 주 메모리 내용을 저장하기 위해 보조 저장장치를 제공해야 한다. 
 
 
 ### 대용량 저장장치 관리
@@ -108,7 +109,10 @@
 ## 캐싱 (caching)
 #### 캐싱이란?
 ```
-캐싱이란 컴퓨터 시스템의 중요한 원리중 하나이다. 컴퓨터에서 항상 정보는 어떤 저장장치에 보관된다. 이 정보를 사용 할 때 정보의 사용됨에 따라 일반적인 보조 저장장치보다 빠른 메모리인 캐시에 일시적으로 복사된다. 그래서 어떤 정보를 찾을 때 캐시에 그 정보가 있는지 조사를 먼저 해 보고 없을 때 보조 저장장치로 가 검색을 하게된다. 이 때 이 정보가 다음에도 사용될 가능성이 높다고 판단되면 OS에서는 이 정보를 캐시에 캐싱한다.   
+캐싱이란 컴퓨터 시스템의 중요한 원리중 하나이다. 컴퓨터에서 항상 정보는 어떤 저장장치에 보관된다. 
+이 정보를 사용 할 때 정보의 사용됨에 따라 일반적인 보조 저장장치보다 빠른 메모리인 캐시에 일시적으로 복사된다.
+그래서 어떤 정보를 찾을 때 캐시에 그 정보가 있는지 조사를 먼저 해 보고 없을 때 보조 저장장치로 가 검색을 하게된다.
+이 때 이 정보가 다음에도 사용될 가능성이 높다고 판단되면 OS에서는 이 정보를 캐시에 캐싱한다.   
 ```
 ___참고)___
 
