6주차 정리 최

--- a/운영체제_6주차.md
+++ b/운영체제_6주차.md
@@ -54,6 +54,100 @@ ex)Mac OS X, QNX, Window XT 등
 - 다양한 동적 적재 모듈을 통해 부가적인 서비스를 제공한다. ( 부팅 혹은 실행중에 링크한다 )
 - 임의의 모듈의 서비스를 호출하는 것이 가능하다. 하지만 메세지로 통신할 필요는 없어 마이크로 커널보다 효율적이다. 
 
+###운영체제의 기본 동작 
+####운영체제의 부팅 
+
+##### 부트스트랩 프로그램
+`컴퓨터에 전원이 들어온 이후 처음 실행되는 프로그램`
+
+컴퓨터에 전원이 들어오면 ROM에 저장된 부트스트랩 프로그램을 불러와 운영체제를 주 메모리에 로드한다. 
+
+만약 부트스트랩 프로그램의 크기가 크다면 ROM에는 부트스트랩 프로그램 대신 부트스트랩 로더가 있고, 디스크로부터 부트스트랩 프로그램을 가져와 주 메모리에 올려 운영체제를 불러오게 한다. 
+
+참고) 펌웨어는 ROM의 모든 형태를 의미한다. 
+
+__부트 섹터__ 
+
+`디스크의 첫번째 (0번쨰) 섹터. 첫 번째 부트스트랩 프로그램을 저장하고 있다.`
+
+#### 인터럽트 
+`CPU에게 새로운 사건(EVENT)의 발생을 알리는 수단` 
+
+컴퓨터 시스템이 외부의 조작이나 내부의 조건에 따라 다양한 방식으로 프로그램을 실행 할 수 있도록 하는 원리 
+
+이벤트는 비동기적으로 발생한다. 
+
+이벤트가 발생하면 CPU는 수행중이던 일을 중단하고 정해진 인터럽트 서비스를 수행한다. 
+
+__운영체제의 모든 동작은 인터럽트에 의해 실행된다!__
+
+##### 인터럽트의 종류 
+
+- 하드웨어 인터럽트 : 입출력 장치에 의해 발생 
+- 내부 인터럽트 : 프로그램 에러에 의해 발생 
+- 소프트웨어 인터럽트 : 프로그램에 의한 운영체제 서비스 요청    
+
+##### 인터럽트의 예 
+
+리눅스의 시그널 
+
+- 프로그램에서 비동기적인 이벤트의 처리에 사용 
+- 일종의 소프트웨어 인터럽트 
+
+##### 인터럽트의 실행 과정 
+
+1. CPU에서 실행되는 작업 중지 : 현재 CPU의 상태를 저장한다.
+
+2. CPU실행 제어를 인터럽트 서비스 루틴 (ISR)로 이동시킨다. 
+   - 인터럽트 벡터로부터 ISR위치 식별 
+
+3. 중단된 작업을 다시 실행 : 저장된 위치로 CPU실행 제어를 이동 
+
+
+##### 인터럽트 벡터 
+
+`인터럽트 서비스 루틴 (ISR)의 위치를 저장한 테이블 `
+
+#### 이중 동작 모드 
+
+`한 프로그램의 오류가 운영체제 및 다른 프로그램에 영향을 끼치지 않게 하기 위해 설계된 시스템`
+
+- 사용자 모드와 커널모드로 나뉘어진다. 
+- 특권 명령 (privileged instruction)은 커널모드에서만 실행 가능하다. 
+- 하드웨어에 모드비트 (mode bit)가 필요하다. (커널 모드 : 0 사용자 모드 : 1 )
+- 운영체제 서비스를 요청하는 System Call을 통해 커널 모드로 전환 (종료 후에는 사용자 모드로 전환)
+
+####System Call (시스템 호출) 
+
+`운영체제가 제공하는 서비스에 대한 프로그래밍 인터페이스`
+
+- 하드웨어의 상세한 동작을 추상화 
+- 운영체제를 통해서만 하드웨어 자원에 접근
+
+##### 매개변수 전달 
+
+
+매개변수?
+
+- 시스템 호출 시에 전달되는 정보 
+- 운영체제와 호출의 종류에 따라 다르다.
+
+전달 방법 
+
+- 레지스터에 전달 : 제한된 개수와 길이의 매개변수만 허용 
+- 메모리 내의 블록 혹은 테이블에 저장 : 메모리 주소를 레지스터에 전달하여 저장 
+- 스택 메모리를 이용 : 프로그램이 매개변수를 넣고(push) 운영체제가 가져감 (pop)
+
+##### 시스템 호출의 종류 (Types of System calls)
+
+- Process Control
+- File Management
+- Device Management 
+- Information maintence
+- Communications 
+- Protection
+
+
 
 
 
