--- a/운영체제_7주차.md
+++ b/운영체제_7주차.md
@@ -64,9 +64,60 @@
 파일의 내부 저장구조는 블록 단위로 논리적 블록(파일)과 물리적 블록(저장장치)의 매핑을 수행한다. 이 때 블록 단위로 저장을 하다보면 생기는 쩌리 공간이 있는데 이런 부분을 __내부 단편__이라 한다. 이 내부 단편이 발생하는 상황을 __내부 단편화__라고 한다.  
 
 ###파일 연산 
+- 운영체제의 시스템 호출(system call)로서 제공
+-  파일 생성 (Create)
+	- 파일 시스템 내에 공간 확보, 디렉터리에 파일 정보 추가
+- 파일 삭제 (Delete)
+	- 파일에 할당된 저장 공간을 반납 (release)
+	‒ 일반적으로 저장 공간 자체를 삭제하는 연산을 하지는 않음
+	- 디렉터리에서 파일 항목을 삭제
+- 파일 쓰기 (Write)
+	- 파일 이름과 기록될 데이터를 명시하여 시스템 호출	
+	- 디렉터리를 검색하여 파일 위치 찾음
+	- 쓰기 포인터(write pointer)를 유지하면서 데이터 기록
+- 파일 읽기 (Read)
+	- 파일 이름과 저장될 메모리 위치(주소)를 명시하여 시스템 호출
+	- 디렉터리를 검색하여 파일 위치 찾음
+	- 읽기 포인터(read pointer)를 유지하면서 데이터 읽음
+- 파일 내의 연산 위치 설정 (Reposition)
+	- 주어진 값으로 파일 위치 포인터 (file-position pointer)를 변경
+	- 파일 탐색(seek)라는 이름으로 알려져 있음
+- 파일 절단 (Truncate)
+	- 파일의 속성을 유지한 채로 파일의 내용을 삭제
+	- 파일 길이는 0으로 재설정
+- 기타 연산
+	- append, rename, get/set attribute
+	
+#### 파일 열기 
+- open() 시스템 호출
+	- 대부분의 파일 연산은 디렉터리에서 파일 정보 검색이 우선되어야 함
+	- 디렉터리의 파일 정보를 시스템 내(메모리)에 복사하여 유지
+		- 열린 파일들의 테이블 (open-file table)
+		- 파일 테이블의 인덱스로 파일 정보를 참조
+			- 유닉스/리눅스에서 파일 디스크립터 (file descriptor)
+	- 파일 접근 모드 명시 (권한과 사용 용도)
 
+<br>
 
+- 파일에 대한 여러 프로세스의 동시 접근이 허용되는 경우
+	- 2 단계 파일 테이블 유지
+	- 프로세스 개별 파일 테이블
+		- 현재 파일 포인터, 파일 접근 권한 및 accounting 정보 등
+	- 시스템 전체 (system-wide) 파일 테이블
+		- 저장장치에서의 파일 위치, 접근 날짜 및 파일 크기 등
+		
+<br>
 
-
+- 파일 포인터 (File pointer)
+	- 마지막 파일 읽기/쓰기가 끝난 위치
+	- 각 프로세스 마다 별도로 유지 (디스크에 저장되는 속성이 아님)
+- 파일 열림 개수 (File-open count)
+	- 동일한 파일을 여러 프로세스가 반복해서 열 수 있음
+	- 마지막 열린 파일이 닫혔을 때(close), 파일 테이블 항목을 삭제
+- 디스크에서 파일의 위치 (Location)
+	- 파일 연산 마다 파일 위치를 검색하지 않도록 열린 파일 테이블에 저장
+- 접근 권한 (Access rights)
+	- 각 프로세스가 해당 파일에 대해 가지는 접근 모드
+	- 운영체제에 의해 허용 혹은 거부
 
 	
